--- a/RangeSeekBar/src/main/res/values/attrs.xml
+++ b/RangeSeekBar/src/main/res/values/attrs.xml
@@ -93,6 +93,7 @@
         <attr name="rsb_indicator_margin" format="dimension" />
         <attr name="rsb_indicator_text_size" format="dimension" />
         <attr name="rsb_indicator_text_color" format="color" />
+        <attr name="rsb_indicator_line_color" format="color" />
         <!--indicator arrow size, it just work when you not use rsb_indicator_drawable -->
         <attr name="rsb_indicator_arrow_size" format="dimension" />
         <!-- must use 9 path ！！！-->
